# Nasdaq-Report

./: .gitignore  AGENTS.md  README.md  pyproject.toml
alembic/: README.md  env.py
alembic/versions/: 20260314_0001_create_universe_tables.py  20260314_0002_create_sec_metadata_tables.py  20260314_0003_create_sec_raw_document_table.py  20260314_0004_create_transcript_tables.py  (+3 more)
data/: universe_snapshot_extended.csv
output/: aapl_latest_analysis_response.json  aapl_latest_report.html  aapl_latest_report.json  aapl_latest_report.md  amzn_latest_analysis_response.json  amzn_latest_report.html  amzn_latest_report.json  amzn_latest_report.md  msft_latest_analysis_response.json  msft_latest_report.html  msft_latest_report.json  msft_latest_report.md  nvda_latest_analysis_response.json  nvda_latest_report.html  nvda_latest_report.json  nvda_latest_report.md  nvda_latest_report_variant_1_fill.html  nvda_latest_report_variant_2_conservative.html  pltr_latest_analysis_response.json  pltr_latest_report.html  pltr_latest_report.json  pltr_latest_report.md
scripts/: README.md  render_report_pdf.py  report_pdf.css  run_nvda_pipeline.sh
tests/: conftest.py  test_api.py  test_cli.py  test_conflicts.py  test_domain_models.py  test_e2e_smoke.py  test_gemini_adapter.py  test_graph.py  test_graph_observability.py  test_indexing.py  test_parsing.py  test_reporting.py  test_repositories.py  test_retriever.py  test_sec_downloads.py  test_sec_metadata.py  test_specialized_agents.py  test_ten_q_heuristics.py  test_transcripts.py  test_universe.py  test_verification.py  test_xbrl.py
(+7002 files in other folders)
