[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "ems"
version = "0.1.0"
description = "Filing-form-aware agentic RAG for evidence-grounded equity research."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Codex" },
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "langgraph>=0.2,<1.0",
  "pgvector>=0.3,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "alembic>=1.13,<2.0",
  "black>=24.8,<25.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "ruff>=0.6,<1.0",
]

[project.scripts]
app = "app.cli.main:app"
app-cli = "app.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["app"]
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
ignore_missing_imports = true
